Arca API: optional insecure SSL fallback

--- a/.env.example
+++ b/.env.example
@@ -55,3 +55,7 @@ MAIL_FROM_NAME="Libro de Reclamaciones"
 # Permite el script CLI de prueba de email (no exponer vía web)
 MAIL_TEST_ENABLED=false
 
+# Arca API (RUC/DNI): set true solo si tu hosting no puede validar el certificado TLS del endpoint.
+# (Inseguro: deshabilita verificación SSL para esa llamada.)
+ARCA_API_INSECURE_SSL=false
+
